crates/postgres-multitenant-ndc/tests/snapshots/tests__select_5.snap
---
source: crates/postgres-multitenant-ndc/tests/tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": {
          "value": "Let There Be Rock"
        }
      },
      {
        "Title": {
          "value": "Big Ones"
        }
      },
      {
        "Title": {
          "value": "Jagged Little Pill"
        }
      },
      {
        "Title": {
          "value": "Facelift"
        }
      },
      {
        "Title": {
          "value": "Warner 25 Anos"
        }
      }
    ]
  }
]
