crates/postgres-multitenant-ndc/tests/snapshots/tests__select_by_pk.snap
---
source: crates/postgres-ndc/tests/tests.rs
expression: result
---
[{"rows":[{"Title":{"value":"Garage Inc. (Disc 1)"}}]}]
