crates/postgres-multitenant-ndc/tests/snapshots/tests__select_where_name_regex.snap
---
source: crates/postgres-multitenant-ndc/tests/tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": {
          "value": 6
        },
        "Title": {
          "value": "Jagged Little Pill"
        }
      }
    ]
  }
]
