crates/postgres-multitenant-ndc/tests/snapshots/tests__select_where_variable.snap
---
source: crates/postgres-multitenant-ndc/tests/tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": {
          "value": "Garage Inc. (Disc 1)"
        }
      },
      {
        "Title": {
          "value": "Garage Inc. (Disc 2)"
        }
      }
    ]
  },
  {
    "rows": [
      {
        "Title": {
          "value": "Beyond Good And Evil"
        }
      }
    ]
  }
]
